src/objects/Staging_BU__c.object
<CustomObject>
    <fields>
        <fullName>BU_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BU Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BU_Name__c</fullName>
        <label>BU Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Employee_Number__c</fullName>
        <label>BU Owner Employee Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Type_Id__c</fullName>
        <label>BU Type Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_BU_ID__c</fullName>
        <label>Department BU ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_BU_Name__c</fullName>
        <label>Department BU Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Department Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_BU_ID__c</fullName>
        <label>Division BU ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_BU_Name__c</fullName>
        <label>Division BU Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Division Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_BU_ID__c</fullName>
        <label>Group  BU ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_BU_Name__c</fullName>
        <label>Group BU Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Staging - BU</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BU-Id-{00000}</displayFormat>
        <label>Staging - BU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging - BU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>